@@ -15,6 +15,10 @@ Bug fixes:
   * Remove timestamp from uninstall scripts to permit reproducible build.
   * Setting mongoc_ssl_opt_t.pem_file or ca_file to a bad file path caused a
     hang with Darwin SSL.
+  * Configuring with ENABLE_SASL=GSSAPI now correctly uses GSSAPI on macOS.
+    Before it was equivalent to ENABLE_SASL=CYRUS.
+  * The default value for ENABLE_SASL (AUTO) now defaults to using SSPI on
+    Windows. Before it would prefer CYRUS if available.
 
 
 mongo-c-driver 1.13.0
